# minecraft-native-linux

./: .gitignore  CMakeLists.linux.cmake  CMakeLists.txt  LICENSE  README.md  README.txt  msvc_compat.h  play.sh  toolchain-linux.cmake
.opencode/plans/: remaining-fixes.md
Minecraft.Client/: AbstractContainerScreen.cpp  AbstractTexturePack.cpp  AbstractTexturePack.h  AchievementPopup.cpp  AchievementScreen.cpp  AchievementScreen.h  ArchiveFile.cpp  ArchiveFile.h  ArrowRenderer.cpp  BlazeModel.cpp  BlazeRenderer.cpp  BoatModel.cpp  BoatRenderer.cpp  BookModel.cpp  BreakingItemParticle.cpp  BreakingItemParticle.h  BubbleParticle.cpp  BufferedImage.cpp  BufferedImage.h  Button.cpp  Button.h  Camera.cpp  Camera.h  ChatScreen.cpp  ChatScreen.h  ChestModel.cpp  ChestRenderer.cpp  ChestRenderer.h  ChickenModel.cpp  ChickenRenderer.cpp  Chunk.cpp  Chunk.h  ClientConnection.cpp  ClientConnection.h  ClientConstants.cpp  ClockTexture.cpp  ClockTexture.h  CompassTexture.cpp  CompassTexture.h  ConfirmScreen.cpp  (+307 more)
Minecraft.Client/Common/: App_Defines.h  App_enums.h  App_structs.h  BuildVer.h  CMemoryPool.h  CMemoryPoolAllocator.h  ConsoleGameMode.cpp  ConsoleGameMode.h  Console_Awards_enum.h  Console_Utils.cpp  Consoles_App.cpp  Consoles_App.h  Potion_Macros.h
Minecraft.Client/Common/Audio/: Consoles_SoundEngine.h  SoundEngine.cpp  SoundEngine.h  SoundNames.cpp
Minecraft.Client/Common/Colours/: ColourTable.cpp
Minecraft.Client/Common/DLC/: DLCAudioFile.cpp  DLCColourTableFile.cpp  DLCGameRulesHeader.cpp  DLCGameRulesHeader.h  DLCLocalisationFile.cpp  DLCManager.cpp  DLCManager.h  DLCPack.cpp  DLCPack.h  DLCSkinFile.cpp  DLCSkinFile.h  DLCUIDataFile.cpp
Minecraft.Client/Common/GameRules/: AddEnchantmentRuleDefinition.cpp  AddItemRuleDefinition.cpp  ApplySchematicRuleDefinition.cpp  ApplySchematicRuleDefinition.h  BiomeOverride.cpp  CollectItemRuleDefinition.cpp  CompleteAllRuleDefinition.cpp  CompoundGameRuleDefinition.cpp  ConsoleGameRules.h  ConsoleGenerateStructure.cpp  ConsoleGenerateStructure.h  ConsoleSchematicFile.cpp  ConsoleSchematicFile.h  GameRule.cpp  GameRule.h  GameRuleDefinition.cpp  GameRuleDefinition.h  GameRuleManager.cpp  GameRuleManager.h  LevelGenerationOptions.cpp  LevelGenerationOptions.h  LevelRuleset.cpp  NamedAreaRuleDefinition.cpp  StartFeature.cpp  StartFeature.h  StructureActionGenerateBox.cpp  StructureActionGenerateBox.h  StructureActionPlaceBlock.cpp  StructureActionPlaceBlock.h  StructureActionPlaceContainer.cpp  StructureActionPlaceContainer.h  StructureActionPlaceSpawner.cpp  StructureActionPlaceSpawner.h  UpdatePlayerRuleDefinition.cpp  UseTileRuleDefinition.cpp
Minecraft.Client/Common/Leaderboards/: LeaderboardManager.cpp  LeaderboardManager.h
Minecraft.Client/Common/Media/: xuiscene_base.h  xuiscene_debug_schematic_create.h  xuiscene_ingame_player_options_small.h  xuiscene_intro.h  xuiscene_multi_gameinfo.h  xuiscene_multi_gameinfo_480.h  xuiscene_settings_UI.h  xuiscene_settings_options.h
Minecraft.Client/Common/Network/: GameNetworkManager.cpp  GameNetworkManager.h  PlatformNetworkManagerInterface.h  PlatformNetworkManagerStub.cpp  PlatformNetworkManagerStub.h  SessionInfo.h
Minecraft.Client/Common/Telemetry/: TelemetryManager.cpp
Minecraft.Client/Common/Tutorial/: AreaConstraint.cpp  AreaHint.cpp  ChangeStateConstraint.cpp  ChoiceTask.cpp  CompleteUsingItemTask.cpp  ControllerTask.cpp  ControllerTask.h  CraftTask.cpp  DiggerItemHint.cpp  EffectChangedTask.cpp  FullTutorial.cpp  InfoTask.cpp  InputConstraint.cpp  LookAtTileHint.cpp  StatTask.cpp  StatTask.h  TakeItemHint.cpp  Tutorial.cpp  Tutorial.h  TutorialConstraint.h  TutorialEnum.h  TutorialHint.cpp  TutorialMode.cpp  TutorialMode.h  TutorialTask.cpp  TutorialTask.h  UseItemTask.h  UseTileTask.h  XuiCraftingTask.cpp  XuiCraftingTask.h
Minecraft.Client/Common/UI/: IUIController.h  IUIScene_AbstractContainerMenu.cpp  IUIScene_AbstractContainerMenu.h  IUIScene_AnvilMenu.cpp  IUIScene_AnvilMenu.h  IUIScene_CraftingMenu.cpp  IUIScene_CraftingMenu.h  IUIScene_CreativeMenu.cpp  IUIScene_CreativeMenu.h  IUIScene_EnchantingMenu.cpp  IUIScene_PauseMenu.cpp  IUIScene_PauseMenu.h  IUIScene_StartGame.cpp  IUIScene_StartGame.h  IUIScene_TradingMenu.cpp  IUIScene_TradingMenu.h  UI.h  UIBitmapFont.cpp  UIComponent_Chat.cpp  UIComponent_Chat.h  UIComponent_DebugUIConsole.cpp  UIComponent_DebugUIMarketingGuide.cpp  UIComponent_Logo.cpp  UIComponent_MenuBackground.cpp  UIComponent_MenuBackground.h  UIComponent_Panorama.cpp  UIComponent_Panorama.h  UIComponent_PressStartToPlay.cpp  UIComponent_Tooltips.cpp  UIComponent_Tooltips.h  UIComponent_TutorialPopup.cpp  UIComponent_TutorialPopup.h  UIControl.cpp  UIControl.h  UIControl_Base.cpp  UIControl_Button.cpp  UIControl_ButtonList.cpp  UIControl_ButtonList.h  UIControl_CheckBox.cpp  UIControl_DynamicLabel.cpp  (+120 more)
Minecraft.Client/Common/XUI/: SlotProgressControl.cpp  XUI_Chat.cpp  XUI_Chat.h  (+129 more)
Minecraft.World/: AABB.cpp  AABB.h  Abilities.cpp  AbstractContainerMenu.cpp  AbstractContainerMenu.h  Achievements.cpp  Achievements.h  AddEntityPacket.cpp  AddEntityPacket.h  AddMobPacket.cpp  AddPlayerPacket.cpp  AddPlayerPacket.h  AgableMob.cpp  Animal.cpp  Animal.h  ArmorDyeRecipe.cpp  ArmorDyeRecipe.h  ArmorItem.cpp  ArmorItem.h  ArmorRecipes.cpp  ArmorRecipes.h  ArmorSlot.cpp  ArmorSlot.h  ArrayWithLength.h  Arrow.cpp  Arrow.h  ArrowAttackGoal.cpp  ArrowAttackGoal.h  AwardStatPacket.cpp  AwardStatPacket.h  BasicTree.cpp  BasicTypeContainers.cpp  BasicTypeContainers.h  BeachBiome.cpp  BedItem.cpp  BedTile.cpp  BedTile.h  BegGoal.h  BinaryHeap.cpp  BinaryHeap.h  (+702 more)
Minecraft.World/x64headers/: extraX64.h
compat/: console_stubs.h  d3d11_stub.h  fios2.h  kernel.h  message_dialog.h  msvc_compat.h  pix.h  platform_stub.h  scebase.h  win_compat.cpp  win_files.cpp  win_files.h  win_handle.h  win_threads.cpp  win_threads.h  win_types.h  wrl.h  xact3.h  xdk.h  xtl.h  xuiapp.h
compat/sysutil/: sysutil_savedata.h
port-src/: gl_engine.cpp  gl_engine.h  gl_main.cpp  headless_main.cpp  headless_server_main.cpp
port-src/stubs/: auto_link_stubs.s  client_shell_stub.cpp
(+36 files in other folders)
